# fasthttp

./: .gitignore  Dockerfile  GLOSSARY  README.md  fly.toml  mix.exs
clients/python/: pyproject.toml
clients/python/src/fasthttp/: __init__.py
clients/python/tests/: test_fasthttp.py
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
lib/: fasthttp.ex  fasthttp_web.ex
lib/fasthttp/: application.ex  core.ex  executor.ex  mailer.ex  release.ex  repo.ex
lib/fasthttp/core/: client.ex
lib/fasthttp/telemetry/: statsd_reporter.ex
lib/fasthttp_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex
lib/fasthttp_web/controllers/: page_controller.ex  request_controller.ex
lib/fasthttp_web/live/: live_helpers.ex  modal_component.ex
lib/fasthttp_web/live/client_live/: form_component.ex  form_component.html.heex  index.ex  index.html.heex  show.ex  show.html.heex
lib/fasthttp_web/live/home/: home_live.ex  index_live.ex  index_live.html.heex
lib/fasthttp_web/templates/layout/: root.html.heex
lib/fasthttp_web/views/: error_helpers.ex  error_view.ex  layout_view.ex  page_view.ex
priv/repo/: seeds.exs
priv/repo/migrations/: 20211018061001_create_clients.exs
test/: test_helper.exs
test/fasthttp/: core_test.exs
test/fasthttp_web/controllers/: page_controller_test.exs
test/fasthttp_web/live/: client_live_test.exs
test/fasthttp_web/views/: error_view_test.exs  layout_view_test.exs  page_view_test.exs
test/support/: channel_case.ex  conn_case.ex  data_case.ex
test/support/fixtures/: core_fixtures.ex
