[tool.poetry]
name = "fasthttp"
version = "0.1.0"
description = ""
authors = ["Minhajuddin Khaja <minhajuddin.k@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
httpcore = {extras = ["http2"], version = "^0.14.7"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^8.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
